# StreamSoft-Real-Time-Market-Analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  repository.yaml  ruff.toml
.github/workflows/: main.yml
consumer/: README.md
consumer/glue/: README.md
consumer/glue/batch_gold/: pyproject.toml
consumer/glue/batch_gold/batch_gold/: job.py
consumer/glue/batch_silver/: pyproject.toml
consumer/glue/batch_silver/batch_silver/: job.py
consumer/glue/streaming_consumer/: pyproject.toml
consumer/glue/streaming_consumer/streaming_consumer/: delta_stream.py  job.py
dashboard/: README.md
dashboard/metabase/: README.md  user_data.sh
infrastructure/terraform/: athena.tf  ec2_metabase.tf  glue.tf  glue_batch.tf  glue_streaming.tf  glue_workflows.tf  kinesis.tf  main.tf  s3.tf  variables.tf
producer/: README.md
producer/python/: README.md
producer/python/producer/: pyproject.toml
producer/python/producer/producer/: financial_market.py  kinesis_producer.py  main.py  utils.py
shared/lambda/lambda_utils_package/: pyproject.toml
shared/python/development_package/: pyproject.toml
