[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["David Felipe Vanegas Ramirez <david@loka.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25"
boto3 = "^1.34"
mimesis = "^15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
