[tool.poetry]
name = "development-package"
version = "0.1.0"
description = "Development package for building and testing"
authors = ["David Felipe Vanegas Ramirez <david@loka.com>"]
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
ruff = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
